overflow fix

--- a/CSS/countdown.css
+++ b/CSS/countdown.css
@@ -16,7 +16,7 @@
   justify-content: center;
   align-items: center;
   max-width: 1600px;
-  margin: auto;
+  margin: 0px;
 }
 
 .timer {
@@ -25,7 +25,7 @@
 .timer .box {
   display: inline-block;
   margin: 1.5em;
-  width: 13vw;
+  width: 15%;
   text-align: center;
   background: #fff4d0;
   -moz-transform-style: preserve-3d;
@@ -220,7 +220,6 @@
 @media screen and (max-width: 800px) {
   .countdown {
     width: 100%;
-    max-width: 25rem;
   }
 }
 @media screen and (max-width: 480px) {
